# ICP

./: .gitignore  CMakeLists.txt  app  imgui.ini  main.cpp  readme.md  vcpkg.json
resources/shaders/: material.frag
src/demos/: lecture_2.cpp  lecture_2.hpp  lecture_3.cpp  lecture_3.hpp
src/lib/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  fps_meter.hpp  gui.cpp  gui.hpp  light_directional.hpp  light_point.hpp  light_spot.hpp  light_system.cpp  light_system.hpp  logger.cpp  logger.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obj_loader.cpp  obj_loader.hpp  physics.hpp  player.cpp  player.hpp  render.cpp  render.hpp  scene.hpp  shader.cpp  shader.hpp  shapes.cpp  vertex.hpp  video.cpp  video.hpp  world.cpp  world.hpp
src/lib/audio/: audio_manager.cpp  audio_manager.hpp
src/render/: render.cpp  render.hpp  shapes.hpp  window.cpp  window.hpp
